Enable lint on more modules.
Also fixed a few simple issues.

Bug: 132723937
Test: N/A
Change-Id: I6d297ded71a792f42c862dd4550cd315b681e93c